# sbtproxy

./: .gitignore  Gemfile  Guardfile  cabal.config  circle.yml  sbtproxy.cabal  stack.yaml
src/: Foo.hs  Main.hs
test/: FooSpec.hs
